Removing / fixing some variables.

--- a/.tugboat/Makefile
+++ b/.tugboat/Makefile
@@ -1,9 +1,10 @@
+# We need bash to use =~ regex tests in if statements.
 SHELL := /bin/bash
-MKFILE_PATH := $(abspath $(lastword $(MAKEFILE_LIST)))
-TUGBOAT_DIR := $(patsubst %/,%,$(dir $(MKFILE_PATH)))
-
-export COMPOSER_NO_INTERACTION = 1
-CURRENT_PHP_VERSION := $(shell php -r "echo PHP_MAJOR_VERSION . '.' . PHP_MINOR_VERSION;" || echo "")
+# Turn off interactive mode in Composer for all subshells.
+export COMPOSER_NO_INTERACTION := 1
+# Determine the current php version. We use a recursively expanded variable so
+# that it's only evaluated when we want the value.
+current_php_version = $(shell php -r "echo PHP_MAJOR_VERSION . '.' . PHP_MINOR_VERSION;")
 
 # To keep things peppier, we can run apt-get update just once by having this as
 # a dependency to install-package-%.
@@ -73,8 +74,8 @@ install-php-%:
 		exit 1;\
 	fi
 #	# Ensure installed PHP version isn't the current version to be installed.
-	@if [ $* = ${CURRENT_PHP_VERSION} ]; then\
-		echo "Current PHP Version is already ${CURRENT_PHP_VERSION}.";\
+	@if [ $* = ${current_php_version} ]; then\
+		echo "Current PHP Version is already ${current_php_version}.";\
 	else \
 		apt-get install -y python-software-properties software-properties-common &&\
 		add-apt-repository -y ppa:ondrej/php &&\
@@ -109,7 +110,7 @@ install-php-%:
 			php$(*)-zip \
 			libapache2-mod-php$(*) &&\
 		a2enmod php$(*) &&\
-		a2dismod php$(CURRENT_PHP_VERSION) &&\
+		a2dismod php$(current_php_version) &&\
 		echo "PHP $(*) installed.";\
 	fi
 
